--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit lang: play.api.i18n.Lang, currentPage: Function1[String, Call])
 
 <!DOCTYPE html>
 
@@ -10,6 +10,15 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+        <ul>
+            <li><a href="@currentPage("en-us")">English</a></li><!-- (American) English -->
+            <li><a href="@currentPage("ja")">日本語</a></li><!-- Japanese -->
+            <li><a href="@currentPage("fr")">Français</a></li><!-- French -->
+            <li><a href="@currentPage("de")">Deutsch</a></li><!-- German -->
+            <li><a href="@currentPage("ko")">한국어</a></li><!-- Korean -->
+            <li><a href="@currentPage("zh-tw")">简体中文</a></li><!-- Chinese (Simplified) -->
+            <li><a href="@currentPage("zh-cn")">繁體中文</a></li><!-- Chinese (Traditional) -->
+        </ul>
         @content
     </body>
 </html>
