--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        <ul>
+        <ul class="languages">
             <li><a href="@currentPage("en-us")">English</a></li><!-- (American) English -->
             <li><a href="@currentPage("ja")">日本語</a></li><!-- Japanese -->
             <li><a href="@currentPage("fr")">Français</a></li><!-- French -->
@@ -18,6 +18,11 @@
             <li><a href="@currentPage("ko")">한국어</a></li><!-- Korean -->
             <li><a href="@currentPage("zh-tw")">简体中文</a></li><!-- Chinese (Simplified) -->
             <li><a href="@currentPage("zh-cn")">繁體中文</a></li><!-- Chinese (Traditional) -->
+        </ul>
+
+        <ul class="menu">
+            <li><a class="home"    href="/@lang.code/">@Messages("menu.home")</a></li>
+            <li><a class="template" href="/@lang.code/template.html">@Messages("menu.template")</a></li>
         </ul>
         @content
     </body>
