Adding a little bit of style to the page

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,6 +24,8 @@
             <li><a class="home"    href="/@lang.code/">@Messages("menu.home")</a></li>
             <li><a class="template" href="/@lang.code/template.html">@Messages("menu.template")</a></li>
         </ul>
-        @content
+        <div class="content">
+            @content
+        </div>
     </body>
 </html>
